# NBPG

./: .gitignore  CMakeLists.txt  README.md
algorithms/: nsw.h  spann.h
algorithms/utils/: mmap.h  utilities.h
algorithms/utils/Graph/: beamSearch.h  dfs.h  graph.h  graph_builder.h  merge_edges.h  prune.h  query_params.h
algorithms/utils/Point/: disk_point_range.h  point.h  point_range.h
algorithms/utils/ivf/: disk_ivf.h  disk_ivf_opt.h  ivf.h  ivf_beamSearch.h  ivf_check_nn_recall.h
algorithms/utils/opt/: FCBasicBlock.h  RMSNorm.h  graph_linear.h  linear.h  optimizer.h  relu.h  sparse_linear.h
algorithms/utils/stats/: get_time.h
data_tools/ANNs/: Vamana.cpp
data_tools/ANNs/FGIM/: FGIM.cpp  FGIM_nsw.h
data_tools/ANNs/HNSW/: HNSW.cpp
data_tools/ANNs/HNSW/base/: hier_beamSearch.h  hier_check_nn_Recall.h  hier_dfs.h  hier_idmapping.h  hier_utils.h  hnsw.h
data_tools/ANNs/SPANN/: SPANN.cpp
data_tools/ANNs/SPANN/cluster/: avl.h  hierarchical_cluster.h  kmeans.h  pivot.h
data_tools/ANNs/SPANN/ivf_search/: disk_ivf.h  disk_ivf_opt.h  ivf_beamSearch.h  ivf_check_nn_recall.h
data_tools/ANNs/base/: check_nn_recall.h  csv_file.h  ground_truth.h  parse_results.h
data_tools/ANNs/data_proc/: CompGT.cpp  FmtConv.cpp  PCACompress.cpp
data_tools/ANNs/data_proc/base/: matrix.h
data_tools/ANNs/data_proc/test/: PCATest.cpp
data_tools/ANNs/nnDescent/: NNDescent.cpp  clusterNN.h  nnDescent.h
include/: log.h
